// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the ExpenseSummary component correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
</div>
`;

exports[`Should render the ExpenseSummary component correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $332.24
  </p>
</div>
`;
